Disable async DNS if VPN is present on L and earlier

The DnsConfigService can't get a correct DNS config for a VPN until
Android M. On earlier versions, check for a VPN and treat it as a config
read failure.

Bug: 805020
Change-Id: I696c52a2e012460ddd70381e5278c3abca9ca665
Reviewed-on: https://chromium-review.googlesource.com/894149
Reviewed-by: Paul Jensen <pauljensen@chromium.org>
Commit-Queue: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533287}
Former-commit-id: a97831b21752cff5e7c542874163ecf5f5ebfb7f